@@ -1,8 +1,14 @@
 package jason.infra.centralised;
 
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Queue;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.logging.Level;
@@ -14,12 +20,14 @@ import jason.architecture.AgArch;
 import jason.asSemantics.ActionExec;
 import jason.asSemantics.Agent;
 import jason.asSemantics.Circumstance;
+import jason.asSemantics.Intention;
 import jason.asSemantics.Message;
 import jason.asSemantics.TransitionSystem;
 import jason.asSyntax.Atom;
 import jason.asSyntax.Literal;
 import jason.mas2j.ClassParameters;
 import jason.runtime.RuntimeServices;
+import jason.runtime.RuntimeServicesFactory;
 import jason.runtime.Settings;
 import jason.util.Config;
 
@@ -39,16 +47,18 @@ import jason.util.Config;
  * <li>stopAg.
  * </ul>
  */
-public class CentralisedAgArch extends AgArch implements Runnable {
+public class CentralisedAgArch extends AgArch implements Runnable, Serializable {
 
-    protected CentralisedEnvironment    infraEnv     = null;
-    private CentralisedExecutionControl infraControl = null;
-    private BaseCentralisedMAS           masRunner    = BaseCentralisedMAS.getRunner();
+    private static final long serialVersionUID = 4378889704809002271L;
 
-    private String           agName  = "";
-    private volatile boolean running = true;
-    private Queue<Message>   mbox    = new ConcurrentLinkedQueue<>();
-    protected Logger         logger  = Logger.getLogger(CentralisedAgArch.class.getName());
+    protected transient CentralisedEnvironment      infraEnv     = null;
+    private   transient CentralisedExecutionControl infraControl = null;
+    private   transient BaseCentralisedMAS          masRunner    = BaseCentralisedMAS.getRunner();
+
+    private String             agName  = "";
+    private volatile boolean   running = true;
+    private Queue<Message>     mbox    = new ConcurrentLinkedQueue<>();
+    protected transient Logger logger  = Logger.getLogger(CentralisedAgArch.class.getName());
 
     private static List<MsgListener> msgListeners = null;
     public static void addMsgListener(MsgListener l) {
@@ -61,14 +71,20 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         msgListeners.remove(l);
     }
 
+    private void readObject(ObjectInputStream inputStream) throws IOException, ClassNotFoundException {
+        inputStream.defaultReadObject();
+        sleepSync = new Object();
+        syncMonitor = new Object();
+    }   
+    
+
     /**
      * Creates the user agent architecture, default architecture is
      * jason.architecture.AgArch. The arch will create the agent that creates
      * the TS.
      */
-    public void createArchs(Collection<String> agArchClasses, String agClass, ClassParameters bbPars, String asSrc, Settings stts, BaseCentralisedMAS masRunner) throws JasonException {
+    public void createArchs(Collection<String> agArchClasses, String agClass, ClassParameters bbPars, String asSrc, Settings stts) throws JasonException {
         try {
-            this.masRunner = masRunner;
             Agent.create(this, agClass, bbPars, asSrc, stts);
             insertAgArch(this);
 
@@ -76,7 +92,7 @@ public class CentralisedAgArch extends AgArch implements Runnable {
 
             // mind inspector arch
             if (stts.getUserParameter(Settings.MIND_INSPECTOR) != null) {
-                insertAgArch( (AgArch)Class.forName( Config.get().getMindInspectorArchClassName()).newInstance() );
+                insertAgArch( (AgArch)Class.forName( Config.get().getMindInspectorArchClassName()).getConstructor().newInstance() );
                 getFirstAgArch().init();
             }
 
@@ -88,9 +104,9 @@ public class CentralisedAgArch extends AgArch implements Runnable {
     }
 
     /** init the agent architecture based on another agent */
-    public void createArchs(Collection<String> agArchClasses, Agent ag, BaseCentralisedMAS masRunner) throws JasonException {
+    public void createArchs(Collection<String> agArchClasses, Agent ag) throws JasonException {
         try {
-            this.masRunner = masRunner;
+            setMASRunner(masRunner); // TODO: remove
             setTS(ag.clone(this).getTS());
             insertAgArch(this);
 
@@ -102,6 +118,10 @@ public class CentralisedAgArch extends AgArch implements Runnable {
             throw new JasonException("as2j: error creating the agent class! - ", e);
         }
     }
+    
+    public void setMASRunner(BaseCentralisedMAS masRunner) {
+        this.masRunner = masRunner;
+    }
 
 
     public void stopAg() {
@@ -110,7 +130,13 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         if (myThread != null)
             myThread.interrupt();
         getTS().getAg().stopAg();
-        getUserAgArch().stop(); // stops all archs
+
+        // stop all archs
+        AgArch f = getUserAgArch();
+        while (f != null) {
+            f.stop();
+            f = f.getNextAgArch();
+        }
     }
 
 
@@ -156,12 +182,14 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         return infraControl;
     }
 
-    private Thread myThread = null;
+    private transient Thread myThread = null;
     public void setThread(Thread t) {
         myThread = t;
         myThread.setName(agName);
     }
-
+    public Thread getThread() {
+        return myThread;
+    }
     public void startThread() {
         myThread.start();
     }
@@ -210,9 +238,14 @@ public class CentralisedAgArch extends AgArch implements Runnable {
     }
 
     protected void reasoningCycle() {
+        getUserAgArch().incCycleNumber();
+        getUserAgArch().reasoningCycleStarting();
+        
         sense();
         deliberate();
         act();
+        
+        getUserAgArch().reasoningCycleFinished();
     }
 
     public void run() {
@@ -230,7 +263,6 @@ public class CentralisedAgArch extends AgArch implements Runnable {
                 }
                 informCycleFinished(isBreakPoint, getCycleNumber());
             } else {
-                getUserAgArch().incCycleNumber();
                 reasoningCycle();
                 if (ts.canSleep())
                     sleep();
@@ -239,7 +271,7 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         logger.fine("I finished!");
     }
 
-    private Object sleepSync = new Object();
+    private transient Object sleepSync = new Object();
     private int    sleepTime = 50;
 
     public static final int MAX_SLEEP = 1000;
@@ -302,7 +334,7 @@ public class CentralisedAgArch extends AgArch implements Runnable {
 
         if (rec == null) {
             if (isRunning())
-                throw new ReceiverNotFoundException("Receiver '" + m.getReceiver() + "' does not exist! Could not send " + m);
+                throw new ReceiverNotFoundException("Receiver '" + m.getReceiver() + "' does not exist! Could not send " + m, m.getReceiver());
             else
                 return;
         }
@@ -320,10 +352,10 @@ public class CentralisedAgArch extends AgArch implements Runnable {
     }
 
     public void broadcast(jason.asSemantics.Message m) throws Exception {
-        for (String agName: masRunner.getAgs().keySet()) {
+        for (String agName: RuntimeServicesFactory.get().getAgentsNames()) {
             if (!agName.equals(this.getAgName())) {
                 m.setReceiver(agName);
-                sendMsg(m);
+                getFirstAgArch().sendMsg(m);
             }
         }
     }
@@ -363,7 +395,7 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         return mbox.isEmpty() && isRunning();
     }
 
-    private Object  syncMonitor                = new Object();
+    private transient Object  syncMonitor = new Object();
     private volatile boolean inWaitSyncMonitor = false;
 
     /**
@@ -414,7 +446,7 @@ public class CentralisedAgArch extends AgArch implements Runnable {
     }
 
     public RuntimeServices getRuntimeServices() {
-        return masRunner.getRuntimeServices();
+        return RuntimeServicesFactory.get();
     }
 
     private RConf conf;
@@ -465,4 +497,34 @@ public class CentralisedAgArch extends AgArch implements Runnable {
         this.cyclesAct = cyclesAct;
     }
 
+    @Override
+    public Map<String, Object> getStatus() {
+        Map<String, Object> status = super.getStatus();
+        
+        status.put("cycle", getCycleNumber());
+        status.put("idle", getTS().canSleep());
+        
+        // put intentions
+        Circumstance c = getTS().getC();
+        
+        status.put("nbIntentions", c.getNbRunningIntentions() + c.getPendingIntentions().size());
+
+        List<Map<String, Object>> ints = new ArrayList<>();
+        Iterator<Intention> ii = c.getAllIntentions();
+        while (ii.hasNext()) {
+            Intention i = ii.next();
+            Map<String, Object> iprops = new HashMap<>();
+            iprops.put("id", i.getId());
+            iprops.put("finished", i.isFinished());
+            iprops.put("suspended", i.isSuspended());
+            if (i.isSuspended()) {
+                iprops.put("suspendedReason", i.getSuspendedReason());
+            }
+            iprops.put("size", i.size());
+            ints.add(iprops);
+        }
+        status.put("intentions", ints);
+        
+        return status;
+    }
 }
