@@ -37,11 +37,11 @@ public class JadeExecutionControl extends JadeAg implements ExecutionControlInfr
             if (args != null && args.length > 0) {
                 if (args[0] instanceof ClassParameters) { // it is an mas2j parameter
                     ClassParameters ecp = (ClassParameters)args[0];
-                    userControl = (ExecutionControl) Class.forName(ecp.getClassName()).newInstance();
+                    userControl = (ExecutionControl) Class.forName(ecp.getClassName()).getConstructor().newInstance();
                     userControl.setExecutionControlInfraTier(this);
                     userControl.init(ecp.getParametersArray());
                 } else {
-                    userControl = (ExecutionControl) Class.forName(args[0].toString()).newInstance();
+                    userControl = (ExecutionControl) Class.forName(args[0].toString()).getConstructor().newInstance();
                     userControl.setExecutionControlInfraTier(this);
                     if (args.length > 1) {
                         logger.warning("Execution control arguments is not implemented yet (ask it to us if you need)!");
